# vendor-red-team-passport

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: config.py  main.py
apps/api/routes/: metrics.py  passport.py  profiles.py  run.py  ui.py
apps/api/schemas/: case.py  passport.py  result.py
apps/api/services/: audit.py  auth.py  claims.py  compliance_mapper.py  coverage.py  errors.py  evaluator.py  featherless_client.py  job_executor.py  jobs.py  (+9 more)
apps/web/: README.md
data/cases/: cases.v1.json  schema.case.json
data/compliance/: crosswalk.v1.yaml
docs/: architecture.md  demo-authz.md  demo-script.md  masterprompt.md  sprint_week1_backlog.md  sprint_week2_backlog.md  threat-model.md  transparency.md
docs/adr/: ADR-001-enterprise-architecture.md
profiles/: full_suite.yaml  high_sensitivity.yaml  quick_gates.yaml
reports/passports/: passport.latest.json
scripts/: analyze_benchmarks.py  benchmark_models.py  build_case_suite.py  generate_passport.py  list_models.py  migrate_run_tenant.py  procurement_one_pager.py  regression_gate.py  run_run.py  run_suite.py  verify_manifest.py  worker_run_jobs.py
tests/: conftest.py
tests/api/: test_audit_events.py  test_auth_access.py  test_claims_matrix.py  test_error_contract.py  test_health.py  test_input_validation.py  test_job_store_sql.py  test_metrics.py  test_orchestrator_offline.py  test_redaction.py  test_regression_gate.py  test_run_jobs.py  test_schema.py  test_scoring.py  test_tenant_isolation.py
tests/e2e/: test_run_suite.py
(+112 files in other folders)
